// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/10/2010
	r187 [Rytech]
	*Added the reballanced headgears to the item_db2.
	- 2 versions now exist. V1 is the one used when the headgears when released and contain the skill bonuses.
	- V2 is the version with all the latest ballances.
	- V1 of the headgears are all disabled by defult and V2 is all enabled.
	- Should I just remove the old ones?

02/09/2010
	r186 [pakpil]
	* Fixed vending.

02/09/2010
	r185 [pakpil]
	* Added WM_POEMOFNETHERWORLDS skill.
	* Fixed WM_SEVERE_RAINSTORM skill. Should be working as intended.
	* Fixed standing packet.
	* Fixed a mistake in pc_jobchange.
	* Fixed DeepSleep status def according with some test in kRO-RE.

02/08/2010
	r184 [pakpil]
	* Fixed clif_displayexp packet. This should show won and lost experience.
	* Fixed clif_vendinglist. Should use 0x800 packet instead 0x801.

02/03/2010
	r176 [Rytech]
	*Added skill max level, SP requirements, and names for Sorcerer's summon skills.
	-I also enabled the 6 skills as their's enough support for them to appear.
	-Latest clients do support these tags, but no official icons has been released yet. So take caution for now.
	-Im now ready for its official release. =D

02/04/2010
	r176 [pakpil]
	* Fixed RK_RUNEMASTERY.
	- Fixed the max amount of each rune you can carry.
	- Fixed the ASPD bonus while using Fighting Spirit that should add +4 ASPD if you have Rune Mastery at level 10.
	* Fixed SC_FEINTBOMB. This skill have been adjusted to the official behavior.
	* Fixed WM_REVERBERATION. It can be destroyed by attacking it with ranged skills or magic. It takes 1 damage from everything.

02/02/2010
	r175 [pakpil]
	* Fixed RK_RUNEMASTERY that was crashing map_server at level lowdest than 10 while crafting.
	* Fixed SC_AUTOSHADOWSPELL that shouldn't spell physical skills. Bug report 131.

02/01/2010
	r174 [Rytech]